--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "mocha"
+    "start": "node server"
   },
   "repository": {
     "type": "git",
