--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "npm": "5.7.1"
   },
   "description": "",
-  "main": "server.js",
+  "main": "server/server.js",
   "dependencies": {
     "binstring": "^0.2.1",
     "express": "^4.16.3",
@@ -17,7 +17,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node server"
+    "start": "node server/server"
   },
   "repository": {
     "type": "git",
