--- a/package.json
+++ b/package.json
@@ -2,20 +2,24 @@
   "name": "food_analytics",
   "version": "1.0.0",
   "engines": {
-  "node": "8.2.1",
-  "npm": "5.7.1"
+    "node": "8.2.1",
+    "npm": "5.7.1"
   },
   "description": "",
   "main": "server/server.js",
   "dependencies": {
     "binstring": "^0.2.1",
     "express": "^4.16.3",
+    "html2canvas": "^1.0.0-alpha.10",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "request": "^2.85.0",
-    "socket.io": "^2.0.4"
+    "socket.io": "^2.0.4",
+    "webshot": "^0.18.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "printscreen": "^1.2.1"
+  },
   "scripts": {
     "start": "node server/server"
   },
