--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "binstring": "^0.2.1",
     "express": "^4.16.3",
     "html2canvas": "^1.0.0-alpha.10",
+    "jimp": "^0.2.28",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "request": "^2.85.0",
     "socket.io": "^2.0.4",
+    "twit": "^2.2.9",
     "webshot": "^0.18.0"
   },
   "devDependencies": {
