--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "binstring": "^0.2.1",
     "express": "^4.16.3",
+    "fsmonitor": "^0.2.4",
     "html2canvas": "^1.0.0-alpha.10",
     "jimp": "^0.2.28",
     "lodash": "^4.17.5",
