--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jimp": "^0.2.28",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "pageres": "^4.5.1",
     "request": "^2.85.0",
     "socket.io": "^2.0.4",
     "twit": "^2.2.9",
