--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "server/server.js",
   "dependencies": {
     "binstring": "^0.2.1",
+    "body-parser": "^1.19.0",
     "express": "^4.16.3",
     "fsmonitor": "^0.2.4",
     "glob": "^7.1.2",
@@ -16,6 +17,8 @@
     "jimp": "^0.2.28",
     "lodash": "^4.17.5",
     "moment": "^2.21.0",
+    "mongodb": "^3.2.6",
+    "node-base64-image": "^1.0.5",
     "pageres": "^4.5.1",
     "request": "^2.85.0",
     "socket.io": "^2.0.4",
