--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+oroborogram_app/node_modules
 
 # testing
 /coverage
 
 # production
-/build
+oroborogram_app/build
 
 # misc
 .DS_Store
@@ -20,6 +20,5 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-
-config.js
-/server/config.js
+# config
+oroborogram_app/server/config.js
